fixed floating navbar by declaring z-index

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,7 +3,8 @@
   left: 0;
   right: 0;
   top: 0;
-  position: fixed;
+  z-index:1;
+  position:fixed;
   background-color: #00a087 ;
   color: #e8fdff;
   padding: 0em 2em;
